--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ collections:
     output: true
 email: your-email@example.com
 description: Jayme Hoffman's blog posts and links on entrepreneuship.
-baseurl: "/jaymehoffman"
+baseurl: ""
 url: ''
 twitter_username: jhoff
 markdown: kramdown
