--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ collections:
     title: Uploads
     output: true
 email: your-email@example.com
-description: Jayme Hoffman's blog posts and links on entrepreneuship.
+description: Jayme Hoffman's blog
 baseurl: ''
 url: ''
 twitter_username: jhoff
