--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,10 @@ email: your-email@example.com
 description: Jayme Hoffman's blog
 baseurl: ''
 url: ''
-twitter_username: jhoff
+twitter_username: JaymeHoffman
 markdown: kramdown
 theme: minima
 plugins:
 - jekyll-feed
+- jekyll-sitemap
+- jekyll-seo-tag
