--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ collections:
     title: Uploads
     output: true
 email: your-email@example.com
+google_analytics: UA-124170593-1
 logo: /assets/jayme-hoffman-logo.png
 image: /assets/og-image.png
 description: Jayme Hoffman's blog
